cmake_minimum_required(VERSION 3.17)
project(untitled)

set(CMAKE_CXX_STANDARD 14)


add_executable(QuestionOne LabFour/QuestionOne.cpp)
add_executable(DynamicMemory Testing/DynamicMemory.cpp)
add_executable(Exercise15 Exercises/Exercise15.cpp)
add_executable(Exercise2 Exercises/Exercise2.cpp)
add_executable(Exercise3 Exercises/Exercise3.cpp)
add_executable(Structures Testing/Structures.c)